# LiDAR-based_anomaly_detector

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  documentation.html  makefile  setup.sh  setup_libraries.sh
anomaly_detection/: CMakeLists.txt  README.md  setup_libraries.sh
anomaly_detection/src/: Octree.cc  main.cc
anomaly_detection/src/anomaly_detection/: AnomalyDetector.cc
anomaly_detection/src/app/: App.cc
anomaly_detection/src/models/: CharacterizedObject.cc  Kernel.cc  Octree.cc  octree.cc
anomaly_detection/src/object_characterization/: ObjectCharacterizator.cc
anomaly_detection/src/scanner/: ScannerCSV.cc  ScannerLVX.cc  ScannerLidar.cc
anomaly_detection/test/model/: points_test.cc
anomaly_detector/: CMakeLists.txt  Doxyfile  README.md  documentation.html  setup_libraries.sh
anomaly_detector/doxygen/: App_8hh.js  CharacteristicsVector_8hh.html  IScanner_8hh.html  IScanner_8hh__dep__incl.dot  InputParser_8hh.html  ModelManager_8hh__incl.dot  Model_8hh.html  Model_8hh__dep__incl.dot  Model_8hh__incl.dot  Model_8hh_source.html  ObjectCharacterizator_8hh__dep__incl.dot  Point_8hh__incl.dot  ScannerCSV_8hh.html  Timestamp_8hh.js  annotated.html  annotated_dup.js  classApp.html  classIObjectCharacterizator.js  classIObjectCharacterizator__inherit__graph.dot  classIScanner.js  classInputParser.html  classObjectCharacterizator.js  classPoint.html  classScannerCSV__inherit__graph.dot  classScannerLVX.html  classScannerLVX.js  classes.html  dir_000005_000004.html  dir_98ff7954eb3842da01d2ae02361edfa5.html  dir_98ff7954eb3842da01d2ae02361edfa5.js  dir_e6a46eaf5f0c8c3e11609743177702c5.js  dir_e89ff169d3e8e77f69d16b855fc26496_dep.dot  functions_rela.html  functions_vars.html  globals_eval.html  hierarchy.html  inherit_graph_4.dot  inherit_graph_8.dot  logging_8hh_source.html  navtreedata.js  (+3 more)
anomaly_detector/doxygen/html/: App_8hh.html  App_8hh__incl.dot  App_8hh_source.html  CharacteristicsVector_8hh.html  CharacteristicsVector_8hh__dep__incl.dot  CharacteristicsVector_8hh__incl.dot  CharacteristicsVector_8hh_source.html  IAnomalyDetector_8hh_source.html  IObjectCharacterizator_8hh.html  IObjectCharacterizator_8hh__incl.dot  IObjectCharacterizator_8hh_source.html  IScanner_8hh.html  IScanner_8hh__incl.dot  IScanner_8hh_source.html  InputParser_8hh.html  InputParser_8hh__incl.dot  InputParser_8hh_source.html  ModelManager_8hh.html  ModelManager_8hh__incl.dot  ModelManager_8hh_source.html  Model_8hh.html  Model_8hh__incl.dot  Model_8hh_source.html  ObjectCharacterizator_8hh.html  ObjectCharacterizator_8hh.js  ObjectCharacterizator_8hh__incl.dot  ObjectCharacterizator_8hh_source.html  PointMap_8hh.html  PointMap_8hh__dep__incl.dot  PointMap_8hh__incl.dot  PointMap_8hh_source.html  Point_8hh.html  Point_8hh__dep__incl.dot  Point_8hh__incl.dot  Point_8hh_source.html  ScannerCSV_8hh.html  ScannerCSV_8hh__incl.dot  ScannerCSV_8hh_source.html  ScannerLVX_8hh.html  ScannerLVX_8hh__dep__incl.dot  (+81 more)
anomaly_detector/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  (+27 more)
anomaly_detector/doxygen/latex/: App_8hh.tex  App_8hh.tex.tmp  App_8hh__incl.dot  CharacteristicsVector_8hh.tex  CharacteristicsVector_8hh__dep__incl.dot  CharacteristicsVector_8hh__incl.dot  IObjectCharacterizator_8hh.tex  IObjectCharacterizator_8hh__dep__incl.dot  IObjectCharacterizator_8hh__incl.dot  IScanner_8hh.tex  IScanner_8hh__dep__incl.dot  IScanner_8hh__incl.dot  InputParser_8hh.tex  InputParser_8hh__incl.dot  ModelManager_8hh.tex  ModelManager_8hh__incl.dot  Model_8hh.tex  Model_8hh__dep__incl.dot  Model_8hh__incl.dot  ObjectCharacterizator_8hh.tex  ObjectCharacterizator_8hh__dep__incl.dot  ObjectCharacterizator_8hh__incl.dot  PointMap_8hh.tex  PointMap_8hh__dep__incl.dot  PointMap_8hh__incl.dot  Point_8hh.tex  Point_8hh__dep__incl.dot  Point_8hh__incl.dot  ScannerCSV_8hh.tex  ScannerCSV_8hh__dep__incl.dot  ScannerCSV_8hh__incl.dot  ScannerLVX_8hh.tex  ScannerLVX_8hh__dep__incl.dot  ScannerLVX_8hh__incl.dot  ScannerLidar_8hh.tex  ScannerLidar_8hh__dep__incl.dot  ScannerLidar_8hh__incl.dot  Timestamp_8hh.tex  Timestamp_8hh__dep__incl.dot  Timestamp_8hh__incl.dot  (+28 more)
anomaly_detector/doxygen/search/: all_8.js  all_a.js  all_b.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  enums_1.js  files_2.js  files_5.js  files_8.js  functions_3.js  functions_7.js  functions_9.js  functions_d.js  variables_0.js
anomaly_detector/include/: debug.hh
anomaly_detector/include/app/: App.hh  InputParser.hh
anomaly_detector/include/logging/: debug.hh  logging.hh
anomaly_detector/include/models/: CharacteristicsVector.hh  Command.hh  Model.hh  ModelManager.hh  Point.hh  PointMap.hh  Timestamp.hh
anomaly_detector/include/object_characterization/: ObjectCharacterizator.hh
anomaly_detector/include/scanner/: IFileScanner.hh  IScanner.hh  ScannerCSV.hh  ScannerLVX.hh  ScannerLidar.hh
anomaly_detector/lib/read_lvx/: CMakeLists.txt  lds.h  lvx_file.cpp
anomaly_detector/src/: main.cc
anomaly_detector/src/main/: main.cc
anomaly_detector/src/object_characterization/: ObjectCharacterizator.cc
anomaly_detector/src/scanner/: ScannerCSV.cc  ScannerLVX.cc
anomaly_detector/src/test/: parser_test.cc
error_measuring/: CMakeLists.txt  CmakeLists.txt  README.md  setup_libraries.sh
error_measuring/data/: data.md
error_measuring/include/: FloatPoint.hh  include.md  planeComputation.hh
error_measuring/src/: main.cc  planeComputation.cc
lib/read_lvx/: CMakeLists.txt  lds.cpp  lds_lvx.cpp  lvx_file.cpp  lvx_file.h  main.cpp
src/anomaly_detector/: CMakeLists.txt  README.md  setup_libraries.sh
src/anomaly_detector/object_characterization/: ObjectCharacterizator.cc
src/anomaly_detector/scanner/: ScannerCSV.cc  ScannerLVX.cc
(+322 files in other folders)
